tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/float_modulo.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(3.14f % 2.0f)

